--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -3,6 +3,7 @@
     <head>
         <title>{{ the_title }}</title>
         <link rel="stylesheet" href="static/hf.css" />
+        <meta charset="utf-8">
     </head>
     <body>
         {% block body %}
