--- a/src/templates/results.html
+++ b/src/templates/results.html
@@ -1,4 +1,4 @@
-{% extends 'base.html' %}
+﻿{% extends 'base.html' %}
 
 {% block body %}
 
@@ -13,5 +13,5 @@
 <p>When "{{ the_phrase }}" is searched for "{{ the_letters }}", the following
 results are returned:</p>
 <h3>{{ the_results }}</h3>
-
+<a href="/">Стартовая страница</a>
 {% endblock %}
